[project]
name = "friendly-happiness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fasta2a>=0.5.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.26",
    "langchain-core>=0.3.68",
    "langgraph>=0.5.2",
    "pydantic-ai>=0.4.2",
    "tqdm>=4.67.1",
    "yfinance>=0.2.65",
    "langchain-ollama>=0.3.4",
]
